--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,7 @@
 @tailwind utilities;
 
 :root {
+  --background-color: white;
   --background: #ffffff;
   --foreground: #171717;
 }
@@ -16,6 +17,11 @@
 
 body {
   color: var(--foreground);
-  background: var(--background);
+  background: var(--background-color);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+/* Add this to hide footer on admin page */
+.hideOnAdmin {
+  display: none;
 }
