--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -7,7 +7,7 @@
 }
 
 .main.collapsed {
-  margin-top: 70px;
+  margin-top: 100px;
 }
 
 .hero {
@@ -111,7 +111,7 @@
   color: #e80570;
 }
 
-.newsSection, .featuresSection {
+.newsSection, .featuredSection {
   padding: 4rem 2rem;
   max-width: 1200px;
   margin: 0 auto;
@@ -295,6 +295,7 @@
   left: 0;
   width: 100%;
   height: 100%;
+  padding-bottom: 56.25%;
   overflow: hidden;
 }
 
